(fix)03-O3-2729: Reduce white space between the back-to-patient-list button and the patient-search section

--- a/packages/esm-patient-lists-app/src/workspaces/patient-list-details.scss
+++ b/packages/esm-patient-lists-app/src/workspaces/patient-list-details.scss
@@ -55,5 +55,5 @@
 }
 
 .tableContainer {
-  margin-top: layout.$spacing-07;
+  margin-top: layout.$spacing-02;
 }
